# ablemod

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
native/: player_shim.cpp  player_shim.hpp  shim.c  shim.h
src/: cli.rs  lib.rs  main.rs  preview.rs  xmlutil.rs
src/chips/: ay8910.rs  ffi.rs  mod.rs  player_ffi.rs  rateconv.rs  scc.rs  ym2413.rs
src/export/: als.rs  midi.rs  midi_file.rs  mod.rs  notes.rs  vgm_als.rs  vgm_operator.rs  vgm_render.rs  vgm_wavetable.rs  wav.rs
src/formats/: base.rs  detect.rs  fasttracker2.rs  mod.rs  playback.rs  protracker.rs  vgm.rs
templates/: audio_track.xml  group_track.xml  operator_track.xml  wavetable_track.xml
tests/: als_tests.rs  chips_tests.rs  cli_tests.rs  midi_tests.rs  notes_tests.rs  playback_tests.rs  protracker_tests.rs  vgm_tests.rs  wav_tests.rs  xm_tests.rs
tests/common/: midi_reader.rs  mod.rs
tests/fixtures/: PINBALLF.MOD
tests/fixtures/Template Glissando Project/: Template Glissando.als
tests/fixtures/Template Project/: Template.als
tests/fixtures/Template Project/Backup/: Template [2026-07-13 112916].als
