[package]
name = "ablemod"
version = "0.1.0"
edition = "2021"
description = "Convert ProTracker modules and VGM/VGZ chiptune rips to Ableton Live projects"
# GPL-2.0-or-later, not this project's own historical preference — forced by vendoring
# libvgm's fmopl.c (MAME's YM3526/YM3812 core), the only non-permissively-licensed dependency
# here. See README.md's own licensing note and build.rs's top-of-file comment.
license = "GPL-2.0-or-later"

[[bin]]
name = "ablemod"
path = "src/main.rs"

[lib]
name = "ablemod"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
hound = "3"
xmltree = "0.11"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
