[package]
name = "ablemod"
version = "0.1.0"
edition = "2021"
description = "Convert ProTracker modules and VGM/VGZ chiptune rips to Ableton Live projects"
# GPL-2.0-or-later, not this project's own historical preference — forced by vendoring
# libvgm's fmopl.c (MAME's YM3526/YM3812 core), the only non-permissively-licensed dependency
# here. See README.md's own licensing note and build.rs's top-of-file comment.
license = "GPL-2.0-or-later"

[[bin]]
name = "ablemod"
path = "src/main.rs"

# The GUI front-end (see src/bin/gui.rs's own module comment) — a separate executable from
# `ablemod` itself, not a subcommand: it never calls into this crate's own export::/formats::
# logic directly, only ever shells out to the `ablemod` CLI binary sitting next to it (or on
# PATH) for every actual action, including `preview`/`preview --record`. That split keeps this
# binary's own dependency graph (egui/eframe + rfd, a full windowing/rendering stack of their
# own) entirely separate from the CLI's — and sidesteps a real macOS constraint: SDL2 (the
# preview window's own toolkit) and eframe's winit backend each expect to own the process'
# main thread's run loop, which two GUI toolkits in one process can't both do at once.
[[bin]]
name = "ablemod-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "ablemod"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1"
hound = "3"
xmltree = "0.11"
# `ablemod preview`'s own dependency (see src/preview.rs's own module comment) — optional and
# feature-gated (see [features] below) so a default `cargo build` of the main CLI never needs
# SDL2/SDL2_ttf (system libraries, not vendored/compiled from source like every other native
# dependency this project links) just to build. "use-pkgconfig": locates the system SDL2
# install (Homebrew's isn't on the default linker search path on Apple Silicon) via pkg-config
# instead of hardcoding a path here — portable across macOS/Linux, whatever the actual install
# prefix is. "ttf" pulls in SDL2_ttf, for the info panel's own text (see assets/ for the
# bundled font this renders with).
sdl2 = { version = "0.37", optional = true, features = ["use-pkgconfig", "ttf"] }
# `ablemod-gui`'s own dependencies — optional/feature-gated for the same reason sdl2 is (a
# default `cargo build` of the CLI shouldn't need a GUI toolkit at all).
eframe = { version = "0.29", optional = true, default-features = false, features = ["default_fonts", "glow"] }
rfd = { version = "0.15", optional = true }

[features]
preview = ["dep:sdl2"]
gui = ["dep:eframe", "dep:rfd"]

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
